@@ -1,7 +1,5 @@
 package com.klarna.mobile.sdk.reactnative;
 
-import android.app.Application;
-
 import androidx.annotation.NonNull;
 
 import com.facebook.react.ReactPackage;
@@ -10,9 +8,9 @@ import com.facebook.react.bridge.ReactApplicationContext;
 import com.facebook.react.uimanager.ViewManager;
 import com.klarna.mobile.sdk.reactnative.checkout.KlarnaCheckoutViewManager;
 import com.klarna.mobile.sdk.reactnative.payments.KlarnaPaymentViewManager;
+import com.klarna.mobile.sdk.reactnative.spec.RNKlarnaSignInModuleSpec;
 import com.klarna.mobile.sdk.reactnative.standalonewebview.KlarnaStandaloneWebViewManager;
 
-import java.util.Collections;
 import java.util.List;
 
 public class KlarnaMobileSDKPackage implements ReactPackage {
@@ -20,7 +18,7 @@ public class KlarnaMobileSDKPackage implements ReactPackage {
     @NonNull
     @Override
     public List<NativeModule> createNativeModules(@NonNull ReactApplicationContext reactContext) {
-        return Collections.emptyList();
+        return List.of(new RNKlarnaSignInModuleSpec(reactContext));
     }
 
     @NonNull
